@@ -25,7 +25,7 @@
 //     http://www.fltk.org/str.php
 //
 
-// generated by Fast Light User Interface Designer (fluid) version 1.0107
+// generated by Fast Light User Interface Designer (fluid) version 1.0108
 
 #ifndef Fl_File_Chooser_H
 #define Fl_File_Chooser_H
@@ -49,24 +49,24 @@
 
 class FL_EXPORT Fl_File_Chooser {
 public:
-  enum { SINGLE = 0, MULTI = 1, CREATE = 2, DIRECTORY = 4 };
+  enum { SINGLE = 0, MULTI = 1, CREATE = 2, DIRECTORY = 4 }; 
 private:
-  static Fl_Preferences prefs_;
-  void (*callback_)(Fl_File_Chooser*, void *);
-  void *data_;
-  char directory_[1024];
-  char pattern_[1024];
-  char preview_text_[2048];
-  int type_;
-  void favoritesButtonCB();
-  void favoritesCB(Fl_Widget *w);
-  void fileListCB();
-  void fileNameCB();
-  void newdir();
-  static void previewCB(Fl_File_Chooser *fc);
-  void showChoiceCB();
-  void update_favorites();
-  void update_preview();
+  static Fl_Preferences prefs_; 
+  void (*callback_)(Fl_File_Chooser*, void *); 
+  void *data_; 
+  char directory_[1024]; 
+  char pattern_[1024]; 
+  char preview_text_[2048]; 
+  int type_; 
+  void favoritesButtonCB(); 
+  void favoritesCB(Fl_Widget *w); 
+  void fileListCB(); 
+  void fileNameCB(); 
+  void newdir(); 
+  static void previewCB(Fl_File_Chooser *fc); 
+  void showChoiceCB(); 
+  void update_favorites(); 
+  void update_preview(); 
 public:
   Fl_File_Chooser(const char *d, const char *p, int t, const char *title);
 private:
@@ -128,10 +128,10 @@ public:
   void callback(void (*cb)(Fl_File_Chooser *, void *), void *d = 0);
   void color(Fl_Color c);
   Fl_Color color();
-  int count();
-  void directory(const char *d);
+  int count(); 
+  void directory(const char *d); 
   char * directory();
-  void filter(const char *p);
+  void filter(const char *p); 
   const char * filter();
   int filter_value();
   void filter_value(int f);
@@ -142,10 +142,10 @@ public:
   const char * label();
   void ok_label(const char *l);
   const char * ok_label();
-  void preview(int e);
-  int preview() const { return previewButton->value(); };
-  void rescan();
-  void rescan_keep_filename();
+  void preview(int e); 
+  int preview() const { return previewButton->value(); }; 
+  void rescan(); 
+  void rescan_keep_filename(); 
   void show();
   int shown();
   void textcolor(Fl_Color c);
@@ -158,23 +158,23 @@ public:
   int type();
   void * user_data() const;
   void user_data(void *d);
-  const char *value(int f = 1);
-  void value(const char *filename);
+  const char *value(int f = 1); 
+  void value(const char *filename); 
   int visible();
-  static const char *add_favorites_label;
-  static const char *all_files_label;
-  static const char *custom_filter_label;
-  static const char *existing_file_label;
-  static const char *favorites_label;
-  static const char *filename_label;
-  static const char *filesystems_label;
-  static const char *manage_favorites_label;
-  static const char *new_directory_label;
-  static const char *new_directory_tooltip;
-  static const char *preview_label;
-  static const char *save_label;
-  static const char *show_label;
-  static Fl_File_Sort_F *sort;
+  static const char *add_favorites_label; 
+  static const char *all_files_label; 
+  static const char *custom_filter_label; 
+  static const char *existing_file_label; 
+  static const char *favorites_label; 
+  static const char *filename_label; 
+  static const char *filesystems_label; 
+  static const char *manage_favorites_label; 
+  static const char *new_directory_label; 
+  static const char *new_directory_tooltip; 
+  static const char *preview_label; 
+  static const char *save_label; 
+  static const char *show_label; 
+  static Fl_File_Sort_F *sort; 
 };
 FL_EXPORT char *fl_dir_chooser(const char *message,const char *fname,int relative=0);
 FL_EXPORT char *fl_file_chooser(const char *message,const char *pat,const char *fname,int relative=0);
