@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.8
 
+	- Fl_File_Chooser now hides the window before doing a callback
+	  when the user clicks on the OK button (STR #1565)
 	- Fixed indentation of nested HTML elements (STR #1549)
 	- Made layout of Fl_Help_Dialog consistent with other
 	  help windows and web browsers.
